--- a/src/main/resources/templates/admin/staff/IndexStaff.html
+++ b/src/main/resources/templates/admin/staff/IndexStaff.html
@@ -89,12 +89,14 @@
                                                                                        name="gender"
                                                                                        value="true"
                                                                                        th:text="Nam"
+                                                                                       style="width: 21px;"
                                                                                        checked>
                                                                             </label>&nbsp;
                                                                             <label>
                                                                                 <input type="radio"
                                                                                        name="gender"
                                                                                        value="false"
+                                                                                       style="width: 21px;"
                                                                                        th:text="Nữ">
                                                                             </label>
                                                                         </div>
