--- a/src/main/resources/templates/admin/rank/DetailRank.html
+++ b/src/main/resources/templates/admin/rank/DetailRank.html
@@ -7,12 +7,12 @@
                     <li class="nav-item">
                         <a class="nav-link active ps-0" id="home-tab" data-bs-toggle="tab"
                            href="#tab1" role="tab"
-                           aria-controls="tab1" aria-selected="true">Rank đang hoạt động</a>
+                           aria-controls="tab1" aria-selected="true">Hạng đang hoạt động</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#tab2"
                            aria-controls="tab2" role="tab"
-                           aria-selected="false">Rank ngừng hoạt động</a>
+                           aria-selected="false">Hạng ngừng hoạt động</a>
                     </li>
                 </ul>
             </div>
@@ -20,15 +20,15 @@
                 <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1">
                     <div>
                         <ul class="breadcrumb">
-                            <li class="breadcrumb-item"><a th:href="@{/mangostore/admin/rank}">Trang chủ rank</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Cập nhật rank</li>
+                            <li class="breadcrumb-item"><a th:href="@{/mangostore/admin/rank}">Trang chủ hạng</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">Cập nhật hạng</li>
                         </ul>
                     </div>
                     <div class="col-lg-12 grid-margin stretch-card container">
                         <div class="card">
                             <div class="card-body container">
                                 <h4 class="font-weight-bold py-3 mb-4">
-                                    Cập nhật Rank,
+                                    Cập nhật hạng,
                                 </h4>
                                 <form id="formRankUpdate" th:action="@{/mangostore/admin/rank/update}"
                                       th:object="${detailRank}"
@@ -37,7 +37,7 @@
                                     <div class="row">
                                         <div class="col-md-3">
                                             <div class="form-group">
-                                                <label class="form-label">Mã rank</label>
+                                                <label class="form-label">Mã hạng</label>
                                                 <input type="text"
                                                        class="form-control"
                                                        name="codeRank" th:field="*{codeRank}" readonly/>
@@ -45,7 +45,7 @@
                                         </div>
                                         <div class="col-md-9">
                                             <div class="form-group">
-                                                <label class="form-label">Tên rank</label>
+                                                <label class="form-label">Tên hạng</label>
                                                 <input type="text" id="nameRankInput"
                                                        class="form-control"
                                                        name="nameRank" th:field="*{nameRank}"/>
@@ -122,15 +122,15 @@
                     <div class="col-lg-12 grid-margin stretch-card">
                         <div class="card">
                             <div class="card-body">
-                                <h4 class="card-title">Danh sách rank ngừng hoạt động</h4>
+                                <h4 class="card-title">Danh sách hạng ngừng hoạt động</h4>
                                 <div class="table-responsive">
                                     <div class="header">
                                         <table class="table table-striped">
                                             <thead>
                                             <tr>
                                                 <th style="width: 30px">#</th>
-                                                <th style="width: 109px">Mã rank</th>
-                                                <th style="width: 117px">Tên rank</th>
+                                                <th style="width: 109px">Mã hạng</th>
+                                                <th style="width: 117px">Tên hạng</th>
                                                 <th style="width: 100px">Điểm tối thiểu</th>
                                                 <th style="width: 100px">Điểm tối đa</th>
                                                 <th style="width: 100px">Người tạo</th>
@@ -176,7 +176,7 @@
                                             <tr th:if="${listRankInactive.isEmpty()}">
                                                 <td colspan="9"
                                                     style="text-align: center; color: red; font-size: larger;">
-                                                    Danh sách rank ngừng hoạt động trống
+                                                    Danh sách hạng ngừng hoạt động trống
                                                 </td>
                                             </tr>
                                             </tbody>
