--- a/src/main/resources/templates/admin/voucher/IndexVoucher.html
+++ b/src/main/resources/templates/admin/voucher/IndexVoucher.html
@@ -77,7 +77,10 @@
                                                                     <div class="form-group">
                                                                         <label class="form-label">Hình thức
                                                                             phiếu giảm giá:</label>
-                                                                        <select name="voucherFrom" class="form-select">
+                                                                        <select name="voucherFrom" class="form-select" id="voucherForm">
+                                                                            <option value="" disabled selected>Mời chọn
+                                                                                hình thức
+                                                                            </option>
                                                                             <option value="all">Tất cả hình thức
                                                                             </option>
                                                                             <option value="offline">Tại quầy</option>
@@ -89,7 +92,10 @@
                                                                     <div class="form-group">
                                                                         <label class="form-label">Phiếu giảm giá thuộc
                                                                             hạng: </label>
-                                                                        <select name="rank" class="form-select">
+                                                                        <select name="rank" class="form-select" id="rankVoucher">
+                                                                            <option value="" disabled selected>Mời chọn
+                                                                                hạng
+                                                                            </option>
                                                                             <option th:each="listRank : ${listRank}"
                                                                                     th:value="${listRank.id}"
                                                                                     th:text="${listRank.nameRank}"></option>
