--- a/src/main/resources/templates/layout/admin/MenuAdmin.html
+++ b/src/main/resources/templates/layout/admin/MenuAdmin.html
@@ -67,7 +67,7 @@
             <div class="collapse" id="form-voucher">
                 <ul class="nav flex-column sub-menu">
                     <li class="nav-item"><a class="nav-link"
-                                            th:href="@{/mangostore/admin/rank}">Rank</a></li>
+                                            th:href="@{/mangostore/admin/rank}">Hạng</a></li>
                     <li class="nav-item"><a class="nav-link"
                                             th:href="@{/mangostore/admin/voucher}">Phiếu giảm giá</a></li>
                     <li class="nav-item"><a class="nav-link"
